--- a/todolist.html
+++ b/todolist.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <title>To Do List</title>
 </head>
 <body>
-    
+    <!--Bootstrap Script-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <div class="container"> 
+        <div class="card mt-5 text-center">
+            <div class="card-body">
+                <h1>To Do List</h1>
+                <input type="text" placeholder="Things To Do" />
+                <button id="enter">Enter</button>
+                <ol id="mylist"></ol>
+                <form>
+                    <div class="input-group mb-3">
+                        <input type="text" id="input-user" placeholder="Things To Do" class="form-control" aria-label="Text input with dropdown button">
+                        <button class="btn btn-outline-info dropdown-toggle" type="submit" id="submit" data-bs-toggle="dropdown" aria-expanded="false">Priority</button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                          <li><a class="dropdown-item" href="#">Important</a></li>
+                          <li><a class="dropdown-item" href="#">Leisure Time</a></li>
+                          <li><hr class="dropdown-divider">Daily Thing</li>
+                          <li><a class="dropdown-item" href="#">Weekly Activities</a></li>
+                          <li><a class="dropdown-item" href="#">Monthly Activities</a></li>
+                        </ul>
+                    </div>
+                    <button id="submit">Submit</button>
+                </form>
+                <div class="list-group text-dark mt-5">
+                    <label class="list-group-item d-flex justify-content-between">
+                      <input class="form-check-input me-1" type="checkbox" value="">
+                      Test Teks
+                      <span><i class="bi bi-x"></i></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
