--- a/todolist.html
+++ b/todolist.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles/main.css">
     <title>To Do List</title>
 </head>
+
 <body>
     <!--Bootstrap Script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <div class="container"> 
+    <div class="container">
         <div class="card mt-5 text-center">
             <div class="card-body bg-todolist">
                 <h1 class="display-1 fw-bold">My To Do List</h1>
@@ -22,11 +24,13 @@
                         <input type="text" id="input-user" placeholder="Things To Do" class="form-control" aria-label="Text input with dropdown button">
                         <button class="btn btn-outline-info dropdown-toggle" type="submit" id="submit" data-bs-toggle="dropdown" aria-expanded="false">Priority</button>
                         <ul class="dropdown-menu dropdown-menu-end">
-                          <li><a class="dropdown-item" href="#">Important</a></li>
-                          <li><a class="dropdown-item" href="#">Leisure Time</a></li>
-                          <li><hr class="dropdown-divider">Daily Thing</li>
-                          <li><a class="dropdown-item" href="#">Weekly Activities</a></li>
-                          <li><a class="dropdown-item" href="#">Monthly Activities</a></li>
+                            <li><a class="dropdown-item" href="#">Important</a></li>
+                            <li><a class="dropdown-item" href="#">Leisure Time</a></li>
+                            <li>
+                                <hr class="dropdown-divider">Daily Thing
+                            </li>
+                            <li><a class="dropdown-item" href="#">Weekly Activities</a></li>
+                            <li><a class="dropdown-item" href="#">Monthly Activities</a></li>
                         </ul>
                     </div>
                     <button id="submit">Submit</button>
@@ -43,4 +47,8 @@
     </div>
     <script src="script/script.js"></script>
 </body>
+
 </html>
+<?php
+
+?>
